--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ description: Machine Learning for Design
 baseurl: "/ml4design.2021-2022"
 url: "https://ml4design.github.io"
 
+aux_links:
+  "Go to current edition":
+    - "https://ml4design.github.io"
+
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE", "lib/", "bin/", "README.md", "Rakefile"
 , "docs/tests/", "drafts"
